--- a/sfdx-project.json
+++ b/sfdx-project.json
@@ -3,9 +3,9 @@
     {
       "path": "force-app",
       "default": true,
-      "id": "0Ho6A0000004C9XSAU",
+      "id": "0Ho0K0000008OI5SAM",
       "versionNumber": "1.0.0.NEXT",
-      "versionName": "version name"
+      "versionName": "1.0.0"
     }
   ],
   "namespace": "",
